Scrollbar issue fix
Scrollbar issue fix

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,9 +3,6 @@
 
 #App {
   font-family: "Carter One", cursive;
-  text-align: center;
-  height: 100%;
-  -webkit-overflow-scrolling: hidden;
 }
 
 .HeaderDiv {
@@ -13,7 +10,8 @@
   border: 1px;
   padding: 4px;
   border-radius: 2px;
-  box-shadow: 2px 5px rgb(27, 27, 27);
+  z-index: 150;
+  box-shadow: 2px 6px rgba(146, 140, 140, 0.707);
   /* background-image: -webkit-linear-gradient(
     -90deg,
     rgba(107, 222, 240, 0.802),
@@ -25,21 +23,6 @@
 
 #page-wrap {
   text-align: center;
-  overflow: auto;
-}
-
-.bm-item:hover {
-  color: rgb(128, 122, 122);
-}
-
-/* Individual item */
-.bm-item {
-  display: inline-block;
-  /* Our sidebar item styling */
-  text-decoration: none;
-  color: #d1d1d1;
-  transition: color 0.2s;
-  align-content: left;
 }
 
 /* Position and sizing of burger button */
@@ -53,12 +36,12 @@
 
 /* Color/shape of burger icon bars */
 .bm-burger-bars {
-  background: #ffffff;
+  background: #373a47;
 }
 
 /* Color/shape of burger icon bars on hover*/
 .bm-burger-bars-hover {
-  background: #9e9b9b;
+  background: #a90000;
 }
 
 /* Position and sizing of clickable cross button */
@@ -96,7 +79,12 @@ Note: Beware of modifying this element as it can break the animations - you shou
 /* Wrapper for item list */
 .bm-item-list {
   color: #b8b7ad;
-  padding: 0.8em;
+  /* padding: 0.5em; */
+}
+
+/* Individual item */
+.bm-item {
+  display: inline-block;
 }
 
 /* Styling of overlay */
